# semidiscrete

lbf/src/: main.rs
lbf/tests/: tests.rs
sdr/: Cargo.toml
sdr/src/: approx_eq.rs  discrete_item.rs  edge_extension.rs  lib.rs  main.rs  sdr_config.rs  sdr_cost.rs  sdr_optimizer.rs
sdr/src/io/: json_output.rs
sdr/tests/: tests.rs
